fixed Close Gap- Stack txt left - image to band

--- a/src/styles/components/_BuildManual.scss
+++ b/src/styles/components/_BuildManual.scss
@@ -15,7 +15,6 @@
   padding-bottom: 10px;
   margin-bottom: 35px;
   background-color: black;
-  overflow: visible;
   position: relative;
 }
 
@@ -27,9 +26,9 @@
 
 .overflow-image {
   position: absolute;
-  top: -100px;
+  top: -26px;
   /* Adjust as needed */
-  right: -0px;
+  left: 240px;
   /* Adjust as needed */
   width: 400px;
   /* Optional: control size */
